--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -9,7 +9,7 @@
 <p>Vous pourrez retrouver ici toutes informations concernant votre profil telles que les quis auxquels vous avez participés ainsi que ceux que vous avez créées.</p>
 
 <a href="{% url "create" %}">
-	<button>Créer un quiz</button>
+	<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4  rounded">Créer un quiz</button>
 </a>
 
 <ul class="flex border-b">
