--- a/quiz/templates/quiz/create.html
+++ b/quiz/templates/quiz/create.html
@@ -4,75 +4,111 @@
 {% block title%}Créer un quiz{% endblock %}
 
 {% block content %}
-<div class="container mx-auto">
-  <h1 class="pt-8 text-2xl font-bold">Créer un quiz :</h1>
-  <a href="{% url 'tutorial' %}" class="py-2 text-blue-500 hover:underline">Découvrir comment créer un quiz</a>
-  <form method="POST" data-subcategories-url="{% url 'ajax_load_subcategories' %}" novalidate class="pt-8" id="quiz-form">
-    {% csrf_token %}
-    <div class="quiz-form" id="quizForm">
-      {{ quiz_form.as_p }}
-    <br>
-    <hr>
-    <br>
-    </div>
-    <div class="tf-form" id="base-tf-form">
-      {{ tf_form.as_p }}
-    <br>
-    <hr>
-    <br>
-    </div>
-    <div class="mc-form" id="base-mc-form">
-      {{ mc_form.as_p}}
-      <br>
-      <hr>
-      <br>
-    </div>
-    <div id="forms">
-    </div>
-      <input type="submit" value="J'ai fini !" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
-  </form>
-  <button class="add-tf-form bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">Ajouter TF</button>
+<form method="post">
+	<div id="quiz">
+		<p>
+		  	<label class="block text-gray-700 text-sm font-bold mb-2"> {{ quiz_form.title.label }}</label>
+		  	<div class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"> {{ quiz_form.title}}</div>
+		</p>
+		<p>
+			{{ quiz_form.description.label }}
+			{{ quiz_form.description }}
+		</p>
+		<p>
+			{{ quiz_form.category.label }}
+			{{quiz_form.category }}
+		</p>
+		<p>
+			{{ quiz_form.sub_category.label }}
+			{{quiz_form.sub_category }}
+		</p>
+	</div>
+	<br>
+	<hr>
+	<br>
+	<div id="tf">
+	{% for tf in tf_form %}
+		<p>
+			{{ tf.content.label }}
+			{{ tf.content }}
+		</p>
+		<p>
+			{{ tf.difficulty.label }}
+			{{ tf.difficulty }}
+		</p>
+		
+		<p>
+			{{ tf.theme1.label }}
+			{{ tf.theme1 }}
+		</p>
+		<p>
+			{{ tf.theme2.label }}
+			{{ tf.theme2 }}
+		</p>
+		<p>
+			{{ tf.theme3.label }}
+			{{ tf.theme3 }}
+		</p>
+		<p>
+			{{ tf.correct.label }}
+			{{ tf.correct }}
+		</p>
+	</div>
+	{% endfor %}
+	<br>
+	<hr>
+	<br>
+	{% for mc in mc_form %}
+		<p>
+			{{ mc.content.label }}
+			{{ mc.content }}
+		</p>
+		<p>
+			{{ mc.difficulty.label }}
+			{{ mc.difficulty }}
+		</p>
+		<p>
+			{{ mc.theme1.label }}
+			{{ mc.theme1 }}
+		</p>
+		<p>
+			{{ mc.theme2.label }}
+			{{ mc.theme2 }}
+		</p>
+		<p>
+			{{ mc.theme3.label }}
+			{{ mc.theme3 }}
+		</p>
+		<p>
+			{{ mc.answer1.label }}
+			{{ mc.answer1 }}
+		</p>
+		<p>
+			{{ mc.answer1_correct.label }}
+			{{ mc.answer1_correct }}
+		</p>
+		<p>
+			{{ mc.answer2.label }}
+			{{ mc.answer2 }}
+		</p>
+		<p>
+			{{ mc.answer2_correct.label }}
+			{{ mc.answer2_correct }}
+		</p>
+		<p>
+			{{ mc.answer3.label }}
+			{{ mc.answer3 }}
+		</p>
+		<p>
+			{{ mc.answer3_correct.label }}
+			{{ mc.answer3_correct }}
+		</p>
+	{% endfor %}
+	
 
-    <button class="add-mc-form bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">Ajouter MC</button>
-  </div>
-</div>
+<input type="submit" value="Créer">
+</form>
 
-<script src="{% static 'js/create.js' %}"> </script>
-<!-- <script src="{% static 'js/dropdown_list.js' %}"> </script>-->
 
-<script>
-// Add a TrueFalse Question Form
-$(document).on('click', '.add-tf-form', function(e){
-  e.preventDefault();
-  var form = $("#base-tf-form");
-  cloneTF(form);
-  return false;
-});
-// Add a MultiChoice Question Form
-$(document).on('click', '.add-mc-form', function(e){
-  e.preventDefault();
-  var form = $("#base-mc-form");
-  console.log(form);
-  cloneTF(form);
-  return false;
-});
 
-// Prevent submit to update the values of max forms
-$('form').one('submit', function(e) {
-  e.preventDefault();
-  // For tf forms
-  $("input[name='tf-TOTAL_FORMS']").each(function() {
-      this.value = total_tf;
-  });
-  // For mc forms
-  $("input[name='mc-TOTAL_FORMS']").each(function() {
-      this.value = total_mc;
-  });
-  //Delete the two basic forms :
-  $("#base-tf-form").remove();
-  $("#base-mc-form").remove();
-  // Submit the forms
-  $(this).submit();
-});
-</script>
 {% endblock %}
