--- a/quiz/templates/quiz/take_quiz.html
+++ b/quiz/templates/quiz/take_quiz.html
@@ -1,1 +1,18 @@
-<p>Hello world</p>
+{% extends "core/base.html" %}
+{% load static %}
+{% load class_tag %}
+
+<h1>{{ quiz.title }}</h1>
+
+{% for question in questions %}
+  <p>{{ question.content }}</p>
+  {% if question|get_class == 'TF_Question' %}
+    <form id="tf-{{ question.id }}">
+    	{{ tf_question.as_p }}
+    </form>
+  {% else %}
+    do else
+  {% endif %}
+
+
+{% endfor %}
