--- a/quiz/templates/quiz/create.html
+++ b/quiz/templates/quiz/create.html
@@ -1,230 +1,73 @@
-{% extends "core/base.html" %}
-{% load static %}
-
-{% block title%}Créer un quiz{% endblock %}
-
-{% block content %}
-<div class="container mx-auto">
-	<form method="post">
-		{% csrf_token %}
-		<div id="quiz">
-			<p>
-		  		<label class="block text-gray-700 text-sm font-bold mb-2"> {{ quiz_form.title.label }}</label>
-		  		<div class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"> {{ quiz_form.title}}</div>
-		  	</p>
-			<p>
-				{{ quiz_form.description.label }}
-				{{ quiz_form.description }}
-			</p>
-			<p>
-				{{ quiz_form.category.label }}
-				{{quiz_form.category }}
-			</p>
-			<p>
-				{{ quiz_form.sub_category.label }}
-				{{quiz_form.sub_category }}
-			</p>
-		</div>
-		<hr>
-		<hr>
-		<div id="tf">
-			{{ tf_form.management_form }}
-			{% for tf in tf_form %}
-			<p>
-				{% for hidden_field in tf.hidden_fields %}
-				{{ hidden_field }}
-				{% endfor %}
-			</p>
-			<p>
-				{{ tf.content.label }}
-				{{ tf.content }}
-			</p>
-			<p>
-				{{ tf.difficulty.label }}
-				{{ tf.difficulty }}
-			</p>
-			<p>
-				{{ tf.theme1.label }}
-				{{ tf.theme1 }}
-			</p>
-			<p>
-				{{ tf.theme2.label }}
-				{{ tf.theme2 }}
-			</p>
-			<p>
-				{{ tf.theme3.label }}
-				{{ tf.theme3 }}
-			</p>
-			<p>
-				{{ tf.correct.label }}
-				{{ tf.correct }}
-			</p>
-			{% endfor %}
-		</div>
-		<hr>
-		<div id="mc">
-			{{ mc_form.management_form }}
-			{% for mc in mc_form %}
-			
-			<p>
-				{% for hidden_field in mc.hidden_fields %}
-				{{ hidden_field }}
-				{% endfor %}
-			</p>
-			<p>
-				{{ mc.content.label }}
-				{{ mc.content }}
-			</p>
-			<p>
-				{{ mc.difficulty.label }}
-				{{ mc.difficulty }}
-			</p>
-			<p>
-				{{ mc.theme1.label }}
-				{{ mc.theme1 }}
-			</p>
-			<p>
-				{{ mc.theme2.label }}
-				{{ mc.theme2 }}
-			</p>
-			<p>
-				{{ mc.theme3.label }}
-				{{ mc.theme3 }}
-			</p>
-			<p>
-				{{ mc.answer1.label }}
-				{{ mc.answer1 }}
-			</p>
-			<p>
-				{{ mc.answer1_correct.label }}
-				{{ mc.answer1_correct }}
-			</p>
-			<p>
-				{{ mc.answer2.label }}
-				{{ mc.answer2 }}
-			</p>
-			<p>
-				{{ mc.answer2_correct.label }}
-				{{ mc.answer2_correct }}
-			</p>
-			<p>
-				{{ mc.answer3.label }}
-				{{ mc.answer3 }}
-			</p>
-			<p>
-				{{ mc.answer3_correct.label }}
-				{{ mc.answer3_correct }}
-			</p>
-			{% endfor %}
-		</div>
-	</div>
-		<input type="submit" value="Créer">
-	</form>
-<!--
-
-	<div id="tf">
-			
-		</div>
+<head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+</head>
 
 
-	
-</form>-->
+<h1>Créer quiz</h1>
+<br>
+<br>
+<form method="POST" id="quiz-form">
+    {% csrf_token %}
+    <div class="quiz-form" id="quizForm">
+      {{ quiz_form.as_p }}
+    <br>
+    <hr>
+    <br>
+    </div>
+    <div class="tf-form" id="base-tf-form">
+      {{ tf_form.as_p }}
+    <br>
+    <hr>
+    <br>
+    </div>
+    <div id="forms">
+    </div>
+      <input type="submit" value="J'ai fini !" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
+</form>
+  <button class="add-tf-form bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" id="add-tf">Ajouter TF</button>
 
-    <button id="add-tf" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">Ajouter TF</button>
-    <button id="add-mc" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">Ajouter MC</button>
-</div>
 
 <script>
 $("#id_tf-0-order").val(1);
-$("#id_mc-0-order").val(2);
-/*
-var total_tf = 1;
-var total_mc = 1;
-var order = 1;
+total_tf = 1;
 
 // Add a TrueFalse Question Form
 $(document).on('click', '#add-tf', function(e){
   e.preventDefault();
-  var form = $("#base-tf");
-  cloneTF(form);
-  return false;
-});
-// Add a MultiChoice Question Form
-$(document).on('click', '#add-mc', function(e){
-  e.preventDefault();
-  var form = $("#base-mc");
-  console.log(form);
+  var form = $("#base-tf-form");
+
   cloneTF(form);
   return false;
 });
 
 function cloneTF(selector) {
-	// clone
-	var newElement = $(selector).clone(true);
-	// update order value
-	newElement.find('#id_tf-' + total_tf).val(order);
-	// change id of the div cloned
-	newElement.prop('id', 'tf-' + total_tf);
+  // get the current total number of tf questions
+  total_tf = $('#id_tf-TOTAL_FORMS').val();
 
-	// update 'for' value of the element
-	newElement.find('label').each(function() {
+  // clone the selected part of the form
+  var newElement = $(selector).clone(true);
+  // change its name and id
+  newElement.find(':input:not([type=button]):not([type=submit]):not([type=reset])').each(function() {
+      var name = $(this).attr('name').replace('-' + (total_tf-1) + '-', '-' + total_tf + '-');
+      var id = 'id_' + name;
+      $(this).attr({'name': name, 'id': id}).val('').removeAttr('checked');
+    });
+  // remove its id (useful later):
+  //$('#base-tf-form').removeAttr('id');
+  // Update the number of tf questions in the labels
+  newElement.find('label').each(function() {
     var forValue = $(this).attr('for');
     if (forValue) {
       forValue = forValue.replace('-' + (total_tf-1) + '-', '-' + total_tf + '-');
       $(this).attr({'for': forValue});
       }
-  	});
-	// append div #forms with newElement
-	$('#forms-container').append(newElement);
-
-	total_tf ++;
-	order ++;
-	return false;
-}
-
-function cloneMC(selector) {
-	// clone
-	var newElement = $(selector).clone(true);
-	// update order value
-	newElement.find('#id_mc-' + total_mc).val(order);
-	// change id of the div cloned
-	newElement.prop('id', 'mc-' + total_mc);
-
-	// update 'for' value of the element
-	newElement.find('label').each(function() {
-    var forValue = $(this).attr('for');
-    if (forValue) {
-      forValue = forValue.replace('-' + (total_mc-1) + '-', '-' + total_mc + '-');
-      $(this).attr({'for': forValue});
-      }
-  	});
-	// append div #forms with newElement
-	$('#forms-container').append(newElement);
-
-	total_mc ++;
-	order ++;
-	return false;
-}
-*/
-// Prevent submit to update the values of max forms
-/*$('form').one('submit', function(e) {
-    e.preventDefault();
-    // For tf forms
-    $("input[name='tf-TOTAL_FORMS']").each(function() {
-        this.value = total_tf;
-        console.log(this);
-    });
-    // For mc forms
-    $("input[name='mc-TOTAL_FORMS']").each(function() {
-        this.value = total_mc;
-        console.log(this);
-    });
-    //Delete the two basic forms :
-    $("#base-tf").remove();
-    $("#base-mc").remove();
+  });
+  total_tf++;
+  // change the id value of the new tf question
+  $('#id_tf-TOTAL_FORMS').val(total_tf);
+  //place it in the div intended for it
+  $('#forms').append(newElement);
   
-    // Submit the forms
-    $(this).submit();
-});*/
+  return false;  
+}
 </script>
-{% endblock %}
