creating tf questions works perfectly on the front end

--- a/quiz/templates/quiz/create.html
+++ b/quiz/templates/quiz/create.html
@@ -25,10 +25,12 @@
 
 
 <script>
-total_tf = 1
-order = 1
+total_tf = 0
+order = 0
 $("#id_tf-0-order").val(order);
+$("#base-tf-form").hide();
 order++;
+
 
 // Add a TrueFalse Question Form
 $(document).on('click', '#add-tf', function(e){
@@ -54,6 +56,7 @@ $("form").submit(function(e){
   $("input[name='tf-MAX_NUM_FORMS']").each(function() {
       this.value = 1000;
   });
+  $("#base-tf-form").remove();
   $(this).submit();
   //e.preventDefault();
 });
@@ -65,23 +68,26 @@ function cloneTF(selector) {
   // clone the selected part of the form
   var newElement = $(selector).clone(true);
 
-  // Empty the fields
-  newElement.find(':input:not([type=button]):not([type=submit]):not([type=reset])').each(function() {
-        var name = $(this).attr('name').replace('-0-', '-' + total_tf + '-');
-        var id = 'id_' + name;
-        $(this).attr({'name': name, 'id': id}).val('').removeAttr('checked');
+  if (total_tf >= 1) {
+    // Empty the fields
+    newElement.find(':input:not([type=button]):not([type=submit]):not([type=reset])').each(function() {
+          var name = $(this).attr('name').replace('-0-', '-' + total_tf + '-');
+          var id = 'id_' + name;
+          $(this).attr({'name': name, 'id': id}).val('').removeAttr('checked');
+      });
+    // Update the number of tf questions in the labels
+    newElement.find('label').each(function() {
+      var forValue = $(this).attr('for');
+      if (forValue) {
+        forValue = forValue.replace('-0-', '-' + total_tf + '-');
+        $(this).attr({'for': forValue});
+        }
     });
-  // Update the number of tf questions in the labels
-  newElement.find('label').each(function() {
-    var forValue = $(this).attr('for');
-    if (forValue) {
-      forValue = forValue.replace('-0-', '-' + total_tf + '-');
-      $(this).attr({'for': forValue});
-      }
-  });
+  }
+  total_tf++;
+  newElement.removeAttr('id').show();
   $('#forms').append(newElement);
   
-  total_tf++;
   return false;  
 }
 </script>
