--- a/core/static/core/base.css
+++ b/core/static/core/base.css
@@ -1,12 +1,6 @@
-@tailwind base;
-
-@tailwind components;
-
-@tailwind utilities;
-
 .header {
-	background-color: #738BCE;
-	color: #8CD894;
+	background-color: darkpastelblue;
+	color: mylightgreen;
 }
 
 .footer {
