--- a/core/static/core/base.css
+++ b/core/static/core/base.css
@@ -1,6 +1,12 @@
+@tailwind base;
+
+@tailwind components;
+
+@tailwind utilities;
+
 .header {
-	background-color: darkpastelblue;
-	color: mylightgreen;
+	background-color: #738BCE;
+	color: #8CD894;
 }
 
 .footer {
