--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -1,4 +1,4 @@
-<header class=" header border-b md:flex md:items-center md:justify-between p-4 pb-0 shadow-lg md:pb-4">
+<header class=" header border-b md:flex md:items-center md:justify-between p-4 pb-0 md:pb-4">
   
   <!-- Logo text or image -->
   <div class="flex items-center justify-between mb-4 md:mb-0">
