--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -8,21 +8,8 @@
 
 
 {% block content %}
-  <div class="first">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-  
-    <div class="presentation">
+  <div class="first bg-contain">
+    <div class="pt-48 pb-32">
       <h1 class="text-center font-bold italic text-6xl text-gray-300">Fast & Quizy</h1>
       <p class="text-center text-2xl text-gray-300">
       	Ici vous pourrez <br>
@@ -31,57 +18,54 @@
     </div>
     <br>
     <br>
-    <div class="button">
-      <button class="bg-yellow-400 hover:bg-orange-400 text-white font-bold py-2 px-4 rounded">Commencer</button>
+    <div class="button pb-32">
+      <button class="rounded-lg border-2 border-yellow-400 hover:bg-yellow-400 text-yellow-400 font-bold py-2 px-4 rounded text-2xl" id="begin">Commencer</button>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
   </div>
 
+  <!-- reste à implémenter la boucle et les conditions pour la couleur
+    des tuiles ainsi que le nombre d'étoiles -->
   <div class='container mx-auto py-8'>
-    <div class="text-center font-bold py-4">
+    <div class="text-center font-bold text-2xl text-gray-800 py-4">
       <h2>Derniers quiz crées</h2>
     </div>
-    <div class="flex content-start flex-wrap bg-gray-200">
-      <div class="w-1/3 p-2">
-        <div class="bg-gray-400 p-2 h-40 rounded-lg">
-          <div class="text-gray-700 text-center truncate">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST
+    <div class="flex flex-wrap">
+      <div class="w-full lg:w-1/3 p-2">
+        <div class="bg-blue-400 p-2 h-40 rounded-lg">
+          <div class="text-gray-700 text-center truncate">Titre du dernier quiz créé
           </div>
           <div class="flex pt-16 justify-center">
             <img class="px-1 pb-1" src="../../static/core/img/etoile.png" alt="etoile">
             <img class="px-1 pb-1" src="../../static/core/img/etoile.png" alt="etoile">
             <img class="px-1 pb-1" src="../../static/core/img/etoile.png" alt="etoile">
           </div>
+        </div>
       </div>
+      <div class="w-full lg:w-1/3 p-2">
+        <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">Titre du pénultième quiz créé</div>
       </div>
-      <div class="w-1/3 p-2">
-        <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">2</div>
+      <div class="w-full lg:w-1/3 p-2">
+        <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">Ceci est le titre de l'anté-pénultième quiz créé, il est particulièrement long</div>
       </div>
-      <div class="w-1/3 p-2">
-        <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">3</div>
+      <div class="w-full lg:w-1/3 p-2">
+        <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">Ce titre-ci est court</div>
       </div>
-      <div class="w-1/3 p-2">
-        <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">4</div>
-      </div>
-      <div class="w-1/3 p-2">
-        <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">5</div>
+      <div class="w-full lg:w-1/3 p-2">
+        <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">Et ce dernier titre de quiz est particulièrement long</div>
       </div>
     </div>
   </div>
-  
 
   <div class="explanations py-4">
-    <div class="container mx-auto text-center">
+    <div class="container mx-auto text-center pb-16">
   	 <h3 class="font-bold p-8">Explications</h3>
      <p class="py-8">
         "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
       </p>
-    <button class="bg-green-400 hover:bg-green-600 text-black font-bold py-2 px-4 rounded">Découvrir</button>
+    <div class="flex justify-evenly -mx-16 px-8">
+    <button class="bg-green-400 hover:bg-green-500 text-gray-800 font-bold py-4 rounded px-8">Créer un quiz</button>
+    <button class="bg-green-400 hover:bg-green-500 text-gray-800 font-bold py-4 rounded px-8 ">Voir les catégories</button>
+  </div>
   </div>
   </div>
 
