--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -29,6 +29,11 @@
     <div class="text-center font-bold text-2xl text-gray-800 py-4">
       <h2>Derniers quiz crées</h2>
     </div>
+    <lu>
+      {% for quiz in quizzes %}
+      <li>{{ quiz.title }}</li>
+      {% endfor %}
+    </lu>
     <div class="flex flex-wrap">
       <div class="w-full lg:w-1/3 p-2">
         <div class="bg-blue-400 p-2 h-40 rounded-lg">
